package v000;
public interface IDataStructure<T> {

    public boolean isEmpty();
    public int size();
    public Object[] listData();
}